--- a/tinker/templates/creative_tim_sidebar.html
+++ b/tinker/templates/creative_tim_sidebar.html
@@ -29,7 +29,9 @@
                 </a>
             </li>
 
-            {% if 'FACULTY' in session['roles'] or 'RECENT-FACULTY' in session['roles'] or 'SPONSORED-FACULTY' in session['roles'] or 'Administrators' in session['groups']
+            {% if 'FACULTY' in session['roles'] or 'RECENT-FACULTY' in session['roles']
+                or 'SPONSORED-FACULTY' in session['roles'] or 'STAFF' in session['roles']
+                or 'Administrators' in session['groups']
                 or 'Tinker Faculty Bios - Admin' in session['groups']
                 or 'Tinker Faculty Bios - CAS' in session['groups']
                 or 'Tinker Faculty Bios - CAPS and GS' in session['groups']
