add chief nursing dean

--- a/tinker/templates/faculty-bios/form.html
+++ b/tinker/templates/faculty-bios/form.html
@@ -224,6 +224,20 @@ to be in it's own card div, something to think about in the future -->
                                         .append($('<label>').html('No').append($('<input type="radio">').attr('name', 'dept-chair' + id).attr('value', 'No'))))
                         )
                 );
+                inner_node.append($('<div>').attr('class', 'hide-when-school-changes' + id).attr('id', 'chief-nursing-dean-div' + id)
+                        .append($('<label>').html('Are you the Chief Nursing Dean?')
+                                .append($('<div>').addClass('radio')
+                                        .append($('<span>').addClass('icons')
+                                                .append($('<span>').addClass('first-icon').addClass('fa').addClass('fa-circle-o').addClass('fa-base'))
+                                                .append($('<span>').addClass('second-icon').addClass('fa').addClass('fa-dot-circle-o').addClass('fa-base')))
+                                        .append($('<label>').html('Yes').append($('<input type="radio">').attr('name', 'chief-nursing-dean' + id).attr('value', 'Yes'))))
+                                .append($('<div>').addClass('radio')
+                                        .append($('<span>').addClass('icons')
+                                                .append($('<span>').addClass('first-icon').addClass('fa').addClass('fa-circle-o').addClass('fa-base'))
+                                                .append($('<span>').addClass('second-icon').addClass('fa').addClass('fa-dot-circle-o').addClass('fa-base')))
+                                        .append($('<label>').html('No').append($('<input type="radio">').attr('name', 'chief-nursing-dean' + id).attr('value', 'No'))))
+                        )
+                );
                 inner_node.append($('<div>').attr('class', 'hide-when-school-changes' + id).attr('id', 'program-director-div' + id)
                         .append($('<label>').html('Are you the Program Director?')
                                 .append($('<div>').addClass('radio')
@@ -353,13 +367,14 @@ to be in it's own card div, something to think about in the future -->
 
                         // Program Directors
                         $('#dept-chair' + (i)).val($('input[name=dept-chair' + (i+1) + ']:checked').val());
+                        $('#chief-nursing-dean' + (i)).val($('input[name=chief-nursing-dean' + (i+1) + ']:checked').val());
                         $('#program-director' + (i)).val($('input[name=program-director' + (i+1) + ']:checked').val());
                         $('#fulltime' + (i)).val($('input[name=fulltime' + (i+1) + ']:checked').val());
                         $('#adjunct' + (i)).val($('input[name=adjunct' + (i+1) + ']:checked').val());
                         $('#emeritus' + (i)).val($('input[name=emeritus' + (i+1) + ']:checked').val());
                         $('#lead-faculty' + (i)).val($('input[name=lead-faculty' + (i+1) + ']:checked').val());
 
-                        var directors = ['dept-chair', 'program-director', 'lead-faculty', 'emeritus', 'fulltime', 'adjunct'];
+                        var directors = ['dept-chair', 'chief-nursing-dean', 'program-director', 'lead-faculty', 'emeritus', 'fulltime', 'adjunct'];
                         $.each(directors, function(index, director){
                             // remove all classes and checked values
                             $('input[name=' + director + (i) + ']').parent().parent().parent().children().removeClass('checked');
@@ -397,12 +412,17 @@ to be in it's own card div, something to think about in the future -->
 
             // todo: this whole method is awful. it has to be redone asap.
             function populateNewJobTitlesFieldset(id, job_title) {
-                var department_chair, program_director, lead_faculty, adult_undergrad_program, graduate_program,
+                var department_chair, chief_nursing_dean, program_director, lead_faculty, adult_undergrad_program, graduate_program,
                         seminary_program, title, emeritus, fulltime, adjunct;
                 if( job_title['department_chair'])
                     department_chair = job_title['department_chair'];
                 else
                     department_chair = job_title['department-chair'];
+
+                if( job_title['chief_nursing_dean'])
+                    chief_nursing_dean = job_title['chief_nursing_dean'];
+                else
+                    chief_nursing_dean = job_title['chief-nursing-dean'];
 
                 if( job_title['fulltime'])
                     fulltime = job_title['fulltime'];
@@ -458,6 +478,9 @@ to be in it's own card div, something to think about in the future -->
                 if( !department_chair)
                     department_chair = 'No';
                 var deptchairid = 'input[name="dept-chair' + id + '"][value="' + department_chair + '"]';
+                if( !chief_nursing_dean)
+                    chief_nursing_dean = 'No';
+                var chiefnursingdeanid = 'input[name="chief-nursing-dean' + id + '"][value="' + chief_nursing_dean + '"]';
                 if( !fulltime)
                     fulltime = 'Yes';
                 var fulltimeid = 'input[name="fulltime' + id + '"][value="' + fulltime + '"]';
@@ -493,6 +516,9 @@ to be in it's own card div, something to think about in the future -->
 
                 $(deptchairid).parent().parent().addClass('checked');
                 $(deptchairid).attr('checked', true);
+
+                $(chiefnursingdeanid).parent().parent().addClass('checked');
+                $(chiefnursingdeanid).attr('checked', true);
 
                 $(fulltimeid).parent().parent().addClass('checked');
                 $(fulltimeid).attr('checked', true);
@@ -589,6 +615,7 @@ to be in it's own card div, something to think about in the future -->
                 }
 
                 addProgramLogic('undergrad', 'dept-chair-div', 'dept-chair');
+                addProgramLogic('undergrad', 'chief-nursing-dean-div', 'chief-nursing-dean');
                 addProgramLogic('undergrad', 'fulltime-div', 'fulltime');
                 addProgramLogic('undergrad', 'adjunct-div', 'adjunct');
                 addProgramLogic('undergrad', 'emeritus-div', 'emeritus');
@@ -607,6 +634,7 @@ to be in it's own card div, something to think about in the future -->
                 }
 
                 addLeadLogic('dept-chair');
+                addLeadLogic('chief-nursing-dean');
                 addLeadLogic('program-director');
                 addLeadLogic('lead-faculty');
 
@@ -859,6 +887,16 @@ to be in it's own card div, something to think about in the future -->
                         </div>
                         <div class="radio">
                             <label><input type="radio" name="dept-chair1" value="No">No</label>
+                        </div>
+                    </label>
+                </div>
+                <div id="chief-nursing-dean-div1" class="hide-when-school-changes1">
+                    <label>Are you the Chief Nursing Dean?
+                        <div class="radio">
+                            <label><input type="radio" name="chief-nursing-dean1" value="Yes">Yes</label>
+                        </div>
+                        <div class="radio">
+                            <label><input type="radio" name="chief-nursing-dean1" value="No">No</label>
                         </div>
                     </label>
                 </div>
