--- a/tinker/templates/faculty-bios/form.html
+++ b/tinker/templates/faculty-bios/form.html
@@ -36,7 +36,6 @@ to be in it's own card div, something to think about in the future -->
                             </div>
                         </div>
                     {% endif %}
-                    {{ form.hidden_tag() }}
                     {% for field in form %}
                         {% if field.widget.input_type != 'hidden' %}
                             {# Print any errors for this field#}
@@ -224,18 +223,18 @@ to be in it's own card div, something to think about in the future -->
                                         .append($('<label>').html('No').append($('<input type="radio">').attr('name', 'dept-chair' + id).attr('value', 'No'))))
                         )
                 );
-                inner_node.append($('<div>').attr('class', 'hide-when-school-changes' + id).attr('id', 'chief-nursing-dean-div' + id)
-                        .append($('<label>').html('Are you the Chief Nursing Dean?')
+                inner_node.append($('<div>').attr('class', 'hide-when-school-changes' + id).attr('id', 'dean-of-nursing-div' + id)
+                        .append($('<label>').html('Are you the Dean of Nursing?')
                                 .append($('<div>').addClass('radio')
                                         .append($('<span>').addClass('icons')
                                                 .append($('<span>').addClass('first-icon').addClass('fa').addClass('fa-circle-o').addClass('fa-base'))
                                                 .append($('<span>').addClass('second-icon').addClass('fa').addClass('fa-dot-circle-o').addClass('fa-base')))
-                                        .append($('<label>').html('Yes').append($('<input type="radio">').attr('name', 'chief-nursing-dean' + id).attr('value', 'Yes'))))
+                                        .append($('<label>').html('Yes').append($('<input type="radio">').attr('name', 'dean-of-nursing' + id).attr('value', 'Yes'))))
                                 .append($('<div>').addClass('radio')
                                         .append($('<span>').addClass('icons')
                                                 .append($('<span>').addClass('first-icon').addClass('fa').addClass('fa-circle-o').addClass('fa-base'))
                                                 .append($('<span>').addClass('second-icon').addClass('fa').addClass('fa-dot-circle-o').addClass('fa-base')))
-                                        .append($('<label>').html('No').append($('<input type="radio">').attr('name', 'chief-nursing-dean' + id).attr('value', 'No'))))
+                                        .append($('<label>').html('No').append($('<input type="radio">').attr('name', 'dean-of-nursing' + id).attr('value', 'No'))))
                         )
                 );
                 inner_node.append($('<div>').attr('class', 'hide-when-school-changes' + id).attr('id', 'program-director-div' + id)
@@ -367,14 +366,14 @@ to be in it's own card div, something to think about in the future -->
 
                         // Program Directors
                         $('#dept-chair' + (i)).val($('input[name=dept-chair' + (i+1) + ']:checked').val());
-                        $('#chief-nursing-dean' + (i)).val($('input[name=chief-nursing-dean' + (i+1) + ']:checked').val());
+                        $('#dean-of-nursing' + (i)).val($('input[name=dean-of-nursing' + (i+1) + ']:checked').val());
                         $('#program-director' + (i)).val($('input[name=program-director' + (i+1) + ']:checked').val());
                         $('#fulltime' + (i)).val($('input[name=fulltime' + (i+1) + ']:checked').val());
                         $('#adjunct' + (i)).val($('input[name=adjunct' + (i+1) + ']:checked').val());
                         $('#emeritus' + (i)).val($('input[name=emeritus' + (i+1) + ']:checked').val());
                         $('#lead-faculty' + (i)).val($('input[name=lead-faculty' + (i+1) + ']:checked').val());
 
-                        var directors = ['dept-chair', 'chief-nursing-dean', 'program-director', 'lead-faculty', 'emeritus', 'fulltime', 'adjunct'];
+                        var directors = ['dept-chair', 'dean-of-nursing', 'program-director', 'lead-faculty', 'emeritus', 'fulltime', 'adjunct'];
                         $.each(directors, function(index, director){
                             // remove all classes and checked values
                             $('input[name=' + director + (i) + ']').parent().parent().parent().children().removeClass('checked');
@@ -412,17 +411,17 @@ to be in it's own card div, something to think about in the future -->
 
             // todo: this whole method is awful. it has to be redone asap.
             function populateNewJobTitlesFieldset(id, job_title) {
-                var department_chair, chief_nursing_dean, program_director, lead_faculty, adult_undergrad_program, graduate_program,
+                var department_chair, dean_of_nursing, program_director, lead_faculty, adult_undergrad_program, graduate_program,
                         seminary_program, title, emeritus, fulltime, adjunct;
                 if( job_title['department_chair'])
                     department_chair = job_title['department_chair'];
                 else
                     department_chair = job_title['department-chair'];
 
-                if( job_title['chief_nursing_dean'])
-                    chief_nursing_dean = job_title['chief_nursing_dean'];
+                if( job_title['dean_of_nursing'])
+                    dean_of_nursing = job_title['dean_of_nursing'];
                 else
-                    chief_nursing_dean = job_title['chief-nursing-dean'];
+                    dean_of_nursing = job_title['dean-of-nursing'];
 
                 if( job_title['fulltime'])
                     fulltime = job_title['fulltime'];
@@ -478,9 +477,9 @@ to be in it's own card div, something to think about in the future -->
                 if( !department_chair)
                     department_chair = 'No';
                 var deptchairid = 'input[name="dept-chair' + id + '"][value="' + department_chair + '"]';
-                if( !chief_nursing_dean)
-                    chief_nursing_dean = 'No';
-                var chiefnursingdeanid = 'input[name="chief-nursing-dean' + id + '"][value="' + chief_nursing_dean + '"]';
+                if( !dean_of_nursing)
+                    dean_of_nursing = 'No';
+                var deanofnursingid = 'input[name="dean-of-nursing' + id + '"][value="' + dean_of_nursing + '"]';
                 if( !fulltime)
                     fulltime = 'Yes';
                 var fulltimeid = 'input[name="fulltime' + id + '"][value="' + fulltime + '"]';
@@ -517,8 +516,8 @@ to be in it's own card div, something to think about in the future -->
                 $(deptchairid).parent().parent().addClass('checked');
                 $(deptchairid).attr('checked', true);
 
-                $(chiefnursingdeanid).parent().parent().addClass('checked');
-                $(chiefnursingdeanid).attr('checked', true);
+                $(deanofnursingid).parent().parent().addClass('checked');
+                $(deanofnursingid).attr('checked', true);
 
                 $(fulltimeid).parent().parent().addClass('checked');
                 $(fulltimeid).attr('checked', true);
@@ -600,7 +599,7 @@ to be in it's own card div, something to think about in the future -->
                             if (!$(this).val() || $(this).val() == 'None') {
                                 $('#' + idToShowHide + num).hide();
                                 $('#' + idToShowHide + num + ' input').prop('checked', false).parent().parent().removeClass('checked');
-                            } else if ( idToShowHide == 'chief-nursing-dean-div' && !$(this).val().includes('Nurs') ) {
+                            } else if ( idToShowHide == 'dean-of-nursing-div' && !$(this).val().includes('Nurs') ) {
                                 $('#' + idToShowHide + num).hide();
                                 $('#' + idToShowHide + num + ' input').prop('checked', false).parent().parent().removeClass('checked');
                             } else {
@@ -622,9 +621,9 @@ to be in it's own card div, something to think about in the future -->
                 addProgramLogic('undergrad', 'fulltime-div', 'fulltime');
                 addProgramLogic('undergrad', 'adjunct-div', 'adjunct');
                 addProgramLogic('undergrad', 'emeritus-div', 'emeritus');
-                addProgramLogic('undergrad', 'chief-nursing-dean-div', 'chief-nursing-dean');
-                addProgramLogic('adult-undergrad', 'chief-nursing-dean-div', 'chief-nursing-dean');
-                addProgramLogic('graduate', 'chief-nursing-dean-div', 'chief-nursing-dean');
+                addProgramLogic('undergrad', 'dean-of-nursing-div', 'dean-of-nursing');
+                addProgramLogic('adult-undergrad', 'dean-of-nursing-div', 'dean-of-nursing');
+                addProgramLogic('graduate', 'dean-of-nursing-div', 'dean-of-nursing');
                 addProgramLogic('adult-undergrad', 'program-director-div', 'program-director');
                 addProgramLogic('graduate', 'program-director-div', 'program-director');
                 addProgramLogic('seminary', 'lead-faculty-div', 'lead-faculty');
@@ -641,7 +640,7 @@ to be in it's own card div, something to think about in the future -->
                     });
                 }
                 //$('#new-job-title-div' + num).show();
-                addLeadLogic(['dept-chair', 'chief-nursing-dean', 'program-director', 'lead-faculty']);
+                addLeadLogic(['dept-chair', 'dean-of-nursing', 'program-director', 'lead-faculty']);
             }
 
 
@@ -894,13 +893,13 @@ to be in it's own card div, something to think about in the future -->
                         </div>
                     </label>
                 </div>
-                <div id="chief-nursing-dean-div1" class="hide-when-school-changes1">
-                    <label>Are you the Chief Nursing Dean?
+                <div id="dean-of-nursing-div1" class="hide-when-school-changes1">
+                    <label>Are you the Dean of Nursing?
                         <div class="radio">
-                            <label><input type="radio" name="chief-nursing-dean1" value="Yes">Yes</label>
+                            <label><input type="radio" name="dean-of-nursing1" value="Yes">Yes</label>
                         </div>
                         <div class="radio">
-                            <label><input type="radio" name="chief-nursing-dean1" value="No">No</label>
+                            <label><input type="radio" name="dean-of-nursing1" value="No">No</label>
                         </div>
                     </label>
                 </div>
