--- a/tinker/templates/faculty-bios/form.html
+++ b/tinker/templates/faculty-bios/form.html
@@ -36,6 +36,7 @@ to be in it's own card div, something to think about in the future -->
                             </div>
                         </div>
                     {% endif %}
+                    {{ form.hidden_tag() }}
                     {% for field in form %}
                         {% if field.widget.input_type != 'hidden' %}
                             {# Print any errors for this field#}
